<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/text_drop_shadow" />

    <TextView
        android:id="@+id/text_no_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="50px"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/text_profile_no_following"
        />

    <TextView
        android:id="@+id/text_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/text_no_following"
        android:textSize="50px"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/text_profile_emoji"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_emoji"
        android:layout_centerInParent="true"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="visible"
        android:background="@android:color/transparent"
        android:text="@string/button_profile_reload"
        />

</RelativeLayout>